crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_complex_if_elif.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Block:
      Standard:
        name: if
        bits:
          - if
          - x
          - ">"
          - "0"
        children:
          - Text: Positive
          - Block:
              Branch:
                name: elif
                bits:
                  - x
                  - "<"
                  - "0"
                children:
                  - Text: Negative
          - Block:
              Branch:
                name: else
                bits: []
                children:
                  - Text: Zero
          - Block:
              Closing:
                name: endif
                bits: []
errors: []
