crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_django_for_block.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Block:
      Block:
        tag:
          name: for
          bits:
            - for
            - item
            - in
            - items
          span:
            start: 0
            length: 17
          tag_span:
            start: 0
            length: 17
          assignment: ~
        nodes:
          - Variable:
              bits:
                - item
              filters: []
              span:
                start: 26
                length: 4
          - Block:
              Tag:
                tag:
                  name: empty
                  bits:
                    - empty
                  span:
                    start: 33
                    length: 5
                  tag_span:
                    start: 33
                    length: 5
                  assignment: ~
          - Text:
              content: No items
              span:
                start: 44
                length: 8
        closing:
          Closing:
            tag:
              name: endfor
              bits:
                - endfor
              span:
                start: 52
                length: 6
              tag_span:
                start: 52
                length: 6
              assignment: ~
        assignments: []
line_offsets:
  - 0
errors: []
