crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_django_if_block.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Tag:
        Block:
          name: if
          bits:
            - if
            - user.is_authenticated
          children:
            - Text: Welcome
            - Django:
                Tag:
                  Closing:
                    name: endif
                    bits: []
errors: []
