crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_django_tag_assignment.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: nodelist
---
nodes:
  - Tag:
      name: url
      bits:
        - "'view-name'"
        - as
        - view
      span:
        start: 0
        length: 23
line_offsets:
  - 0
