crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_django_variable.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: nodelist
---
nodes:
  - Variable:
      var: user.name
      filters: []
      span:
        start: 0
        length: 9
line_offsets:
  - 0
