crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_django_variable_with_filter.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Variable:
      bits:
        - user
        - name
      filters:
        - name: title
          args: []
          span:
            start: 10
            length: 5
      span:
        start: 0
        length: 15
line_offsets:
  - 0
