crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__django__parse_filter_chains.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Variable:
      bits:
        - value
      filters:
        - name: default
          arguments:
            - "'nothing'"
          span:
            start: 6
            length: 17
        - name: title
          arguments: []
          span:
            start: 24
            length: 5
        - name: upper
          arguments: []
          span:
            start: 30
            length: 5
      span:
        start: 0
        length: 35
line_offsets:
  - 0
  - 0
errors: []
